# onnx-cli

./: Cargo.toml  LICENSE  README.md
.cargo/: cargo.toml
src/: main.rs
