[package]
name = "onnx-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
image = "0.25.5"
ndarray = "0.16.1"
# rc, but according to docs ready for use
ort = {version = "=2.0.0-rc.9", features=["ndarray", "half", "fetch-models","download-binaries", "copy-dylibs"]}
ort-sys = "2.0.0-rc.9"

